# arHttp

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
presentations/: 2023-11-23-USDMTL.md
src/: CMakeLists.txt
src/arHttp/: CMakeLists.txt  plugInfo.json  resolver.cpp  resolver.h
src/arHttp/testenv/: stage.usda
src/arHttpSampleServer/: __init__.py  layer1.usda  layer2.usda
