[project]
name = "arHttpSampleServer"
dynamic = ["version"]
description = "Sample arHttp server with static, hardcoded data"
authors = [
    {name = "Charles Flèche", email = "charles.fleche@free.fr"}
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "fastapi[all]"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License ",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Environment :: Web Environment"
]

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "setuptools-scm[toml]"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
